[project]
name = "article-monitor-rewriter"
version = "0.1.0"
description = "A tool for monitoring websites, scraping articles, rewriting content using AI, and publishing to WordPress"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.10",
    "celery==5.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
